--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "del-cli": "^5.0.0",
     "parcel": "^2.8.3"
+  },
+  "dependencies": {
+    "underscore": "^1.13.6"
   }
 }
