--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "stensaxpase",
   "version": "1.0.0",
-  "description": "",
+  "description": "Rock, paper, scissors game with highscore database",
   "scripts": {
     "dev": "parcel ./src/index.html",
     "build": "parcel build ./src/index.html --dist-dir docs --public-url ./",
     "clean": "del-cli ./.parcel-cache ./docs ./dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "Wijk",
   "license": "ISC",
   "devDependencies": {
     "del-cli": "^5.0.0",
